# LearnRendering

./: .gitignore  README.md
Yan/1/YinQinran_HomeWork1/: README.md  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
Yan/2/YinQinran_HomeWork2/: Readme.md  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Yan/5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
Yan/5/Test/: CMakeLists.txt  fun.cpp  fun.hpp  test.cpp
Yan/6/code/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Object.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
Yan/7/: result.pptx
Yan/7/Hw7/PA7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Yan/7/Hw7/PA7/Test/: CMakeLists.txt  main.cpp
Yan/7/Hw7/__MACOSX/PA7/Assignment7/: ._BVH.cpp  ._Bounds3.hpp  ._Light.hpp  ._Renderer.cpp  ._Scene.cpp  ._Triangle.hpp  ._main.cpp
Yan/7/result/: binary-1.ppm  binary-2.ppm  binary-4.ppm  binary-5.ppm  binary-6.ppm  binary-7.ppm  binary-8.ppm  binary-9.ppm
Yan/8/: Video_2020-05-16_142538.wmv  explicit-euler.wmv  explicit-euler_edit.wmv  result.wmv  扣分.txt
Yan/8/assignment8/: CMakeLists.txt
思维导图/1/: homework1-类和函数.xlsx
思维导图/2/: homework2-类和函数.xlsx
